--- a/form.html
+++ b/form.html
@@ -36,6 +36,11 @@
             <input type="text" name="entry.1180958023" placeholder="Purchase above R1000 - Free Delivery">
         </div>
 
+        <div class="form-element">
+            <span>Choise of colour</span>
+            <input type="text" name="entry.1752116142" placeholder="Please type any colour you want.">
+        </div>
+
         <div class="form-element radio-button">
             <span>Do you want Custom Name? (Required)</span>
             <label for="Yes">
