--- a/index.html
+++ b/index.html
@@ -453,6 +453,11 @@
         </div>
       </div>
     </div>
+    
+    <a href="https://wa.me/+27663746228" targer="_blank" style="display: flex; justify-content: center; align-items: center;">
+      <img src="./assets/images/products/whatsaap.png" width="50px" height="50px" >
+    </a>
+
 
     <marquee>
     <p><b>Please: Note Due To LoadShedding The Products You Order Will Take 2-3 Day's Longer.</b></p>
