--- a/3dprint.html
+++ b/3dprint.html
@@ -166,7 +166,7 @@
           </li>
 
           <li class="menu-category">
-            <a href="https://www.google.com" class="menu-title">WoodWork</a>
+            <a href="#" class="menu-title">WoodWork</a>
 
             <div class="dropdown-panel">
 
