--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/mainpage.css">
-    <title>Document</title>
+    <title>Inventiveworks</title>
 </head>
 <body>
     <div class="navigation">
@@ -13,20 +13,19 @@
         <ul>
             <li style="--i:0;"><a href="#">Home</a></li>
             <li style="--i:1;"><a href="#">About</a></li>
-            <li style="--i:2;"><a href="#">Services</a></li>
-            <li style="--i:3;"><a href="#">Team</a></li>
-            <li style="--i:4;"><a href="#">Contact</a></li>
+            <!--<li style="--i:2;"><a href="#">Services</a></li>-->
+            <li style="--i:4;"><a href="contactus.html">Contact Us</a></li>
         </ul>
     </div>
 
     <div class="content">
-        <h1>Select Your Option</h1>
-        <p>Welcome To Inventiveworks.</p>
+        <h1>Welcome To Inventiveworks.</h1>
+        <p>Select you're option.</p>
         <div>
             <a href="3dprint.html">
                 <button type="button">3D - Printing</button>
             </a>
-            <a href="#">
+            <a href="soon.html">
                 <button type="button">Wood Work - Comming Soon</button>
             </a>
         </div>
@@ -39,5 +38,6 @@
             navigation.classList.toggle('active')
         }
     </script>
+
 </body>
 </html>
