--- a/soon.html
+++ b/soon.html
@@ -12,7 +12,7 @@
 <body>
   <section class="coming-soon">
     <div>
-      <h3>Currentrly Under Maintanince.</h3>
+      <h3>Curently Under Maintanince.</h3>
       <div class="countdown">
         <div class="container-day">
           <h3 class="day">Time</h3>
