--- a/3dprint.html
+++ b/3dprint.html
@@ -906,7 +906,7 @@
           -->
 
           <div class="product-featured">
-            <h2 class="title">Deal of the Week</h2>
+            <h2 class="title">Deal of the Month</h2>
             <div class="showcase-wrapper has-scrollbar">
 
               
@@ -960,24 +960,21 @@
                         Hurry Up! Get Your Order.
                       </p>
                       <div class="countdown">
-                        <div class="countdown-content">
-                          <p class="display-number">7</p>
-                          <p class="display-text">Days</p>
+                        <div class="container-day">
+                          <h3 class="day">Time</h3>
+                          <h3>Day</h3>
                         </div>
-
-                        <div class="countdown-content">
-                          <p class="display-number">24</p>
-                          <p class="display-text">Hours</p>
+                        <div class="container-hour">
+                          <h3 class="hour">Time</h3>
+                          <h3>hour</h3>
                         </div>
-
-                        <div class="countdown-content">
-                          <p class="display-number">59</p>
-                          <p class="display-text">Min</p>
+                        <div class="container-minute">
+                          <h3 class="minute">Time</h3>
+                          <h3>minute</h3>
                         </div>
-
-                        <div class="countdown-content">
-                          <p class="display-number">00</p>
-                          <p class="display-text">Sec</p>
+                        <div class="container-second">
+                          <h3 class="second">Time</h3>
+                          <h3>Second</h3>
                         </div>
                       </div>
                     </div>
@@ -1137,10 +1134,10 @@
                     <p class="price">R0.00</p> <h6>InStock: 0</h6>
                     <ul class="header-social-container">
                       <li>
-                        <a href="https://wa.me/+27663746228" class="social-link">
-                          <ion-icon name="logo-whatsapp"></ion-icon>
+                        <a href="form.html" class="social-link">
+                          <i class="fa-solid fa-cart-plus"></i>
                         </a>
-                      </li>
+                      </li> 
 
                   </div>             
                 </div>             
@@ -1485,7 +1482,7 @@
                 </div>             
                 <div class="service-content">            
                   <h3 class="service-title">Best Online Service</h3>
-                  <p class="service-desc">Hours: 8AM - 11PM</p>             
+                  <p class="service-desc">Hours: 8AM - 5PM</p>             
                 </div>
               
               </a>
@@ -1601,6 +1598,7 @@
   -->
   <script src="./assets/js/script.js"></script>
   <script src="./assets/js/copy.js"></script>
+  <script src="./assets/js/3d-print-soon.js"></script>
 
   <!--
     - ionicon link
