--- a/form.html
+++ b/form.html
@@ -72,10 +72,12 @@
             
                     <div class="form-element">
                         <span>Enter Custom Name (only if you selected Yes)</span>
-                        <input type="text" name="entry.2107577001" placeholder="9 characters maximum 3 lines.">
+                        <input type="text" name="entry.2107577001" placeholder="9 characters maximum line 1.">
+                        <input type="text" name="entry.2107577001" placeholder="9 characters maximum line 2.">
+                        <input type="text" name="entry.2107577001" placeholder="9 characters maximum line 3.">
                     </div>
                     <details>
-                        <summary><u>Support Custom Name</u></summary>
+                        <summary><u>Support's Custom Name</u></summary>
                         <ul>
                             <li>Phone stand</li>
                             <li>Card holder</li>
