--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="toggle"><span></span></div>
         <ul>
             <li style="--i:0;"><a href="#">Home</a></li>
-            <li style="--i:1;"><a href="#">About</a></li>
+            <li style="--i:1;"><a href="./About/index.html">About</a></li>
             <!--<li style="--i:2;"><a href="#">Services</a></li>-->
             <li style="--i:4;"><a href="contactus.html">Contact Us</a></li>
         </ul>
@@ -26,9 +26,36 @@
                 <button type="button">3D - Printing</button>
             </a>
             <a href="soon.html">
-                <button type="button">Wood Work - Comming Soon</button>
+                <button type="button">Carpenter Work</button>
             </a>
         </div>
+
+<!--Maintanince-->
+        <!--<section class="coming-soon">
+            <div>
+              <h3>Scheduled Maintanince</h3>
+              <div class="countdown">
+                <div class="container-day">
+                  <h3 class="day">Time</h3>
+                  <h3>Day</h3>
+                </div>
+                <div class="container-hour">
+                  <h3 class="hour">Time</h3>
+                  <h3>hour</h3>
+                </div>
+                <div class="container-minute">
+                  <h3 class="minute">Time</h3>
+                  <h3>minute</h3>
+                </div>
+                <div class="container-second">
+                  <h3 class="second">Time</h3>
+                  <h3>Second</h3>
+                </div>
+              </div>
+            </div>
+          </section>
+          <script src="./assets/js/maintanince.js"></script>--->
+
     </div>
  
     <script>
