--- a/3dprint.html
+++ b/3dprint.html
@@ -930,9 +930,7 @@
                       <div class="copy-link">
                         <input type="text" class="copy-link-input" value="Phone stand" readonly>
                         <p class="price">R180.00</p>
-                        <!--<button type="button" class="copy-link-button">
-                          <span class="material-icons">content_copy</span>
-                        </button>-->
+                        <!--<del>R180.00</del>-->
                       </div>
                      
                       <ul class="header-social-container">
