--- a/contactus.html
+++ b/contactus.html
@@ -11,8 +11,8 @@
 
     <section class="contact">
         <div class="contact-form">
-            <h1>Contact<span> Us</span></h1>
-            <p>Any Questions, or a Quotes please feel free to contact us.
+            <h4>Contact<span> Us</span></h4>
+            <p>Any Questions, or a Quote please feel free to contact us.
             </p>
 
             <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScXZmAUaohOZdvwPhpIfWMT9CM2Ztr5vuvurL34N0v-EgbL4A/formResponse" method="post">
