--- a/form.html
+++ b/form.html
@@ -9,12 +9,14 @@
     <title>Customer Order</title>
 </head>
 <body>
+    <script type="text/javascript">var submited=false</script>
+    <iframe name="hiddenConfirm" id="hiddenConfirm" style="display: none;" onload="if(submitted){window.location='submisive.html';}"></iframe>
 
     <div class="scroll-bg">
         <div class="scroll-div">
             <div class="scroll-object">
 
-                <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeUXodkjO5lP5m-SQSpRKTKBZacLWBfNaexzxLq3NXEazCKpw/formResponse" method="post">
+                <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeUXodkjO5lP5m-SQSpRKTKBZacLWBfNaexzxLq3NXEazCKpw/formResponse" method="post" target="hiddenConfirm" onsubmit="submitted=true">
 
                     <h1><ul>Order</ul></h1>
 
