--- a/3dprint.html
+++ b/3dprint.html
@@ -113,28 +113,29 @@
         <ul class="header-social-container">
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.facebook.com/profile.php?id=100086009904647" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.tiktok.com/@inventiveworks.org?_t=8WArzdzcVGf&_r=1" class="social-link">
+              <ion-icon name="logo-tiktok"></ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="https://twitter.com/inventiveworks1?t=r0Dph4sS25fbMcCoG4A0dw&s=09" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/invites/contact/?i=1s0atztwx3u8w&utm_content=plpfrux" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
 
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-linkedin"></ion-icon>
-            </a>
-          </li>
           <li>
             <a href="https://wa.me/+27663746228" class="social-link">
               <ion-icon name="logo-whatsapp"></ion-icon>
