--- a/3dprint.html
+++ b/3dprint.html
@@ -1032,8 +1032,7 @@
                 </div>
               
                 <div class="showcase-content">
-                  <div class="showcase-content">
-                    <h5>Tap the shoping cart to purchase the item the product name is below.</h5>             
+                  <div class="showcase-content">             
                     <a class="showcase-category"></a>
                     <div class="copy-link">
                       <input type="text" class="copy-link-input" value="Card holder" readonly>
@@ -1552,25 +1551,28 @@
             <ul class="social-link">
 
               <li class="footer-nav-item">
-                <a href="#" class="footer-nav-link">
+                <a href="https://www.facebook.com/profile.php?id=100086009904647" class="footer-nav-link">
                   <ion-icon name="logo-facebook"></ion-icon>
                 </a>
               </li>
               <li class="footer-nav-item">
-                <a href="#" class="footer-nav-link">
+                <a href="https://twitter.com/inventiveworks1?t=r0Dph4sS25fbMcCoG4A0dw&s=09" class="footer-nav-link">
                   <ion-icon name="logo-twitter"></ion-icon>
                 </a>
               </li>
+             
               <li class="footer-nav-item">
-                <a href="#" class="footer-nav-link">
-                  <ion-icon name="logo-linkedin"></ion-icon>
-                </a>
-              </li>
-              <li class="footer-nav-item">
-                <a href="#" class="footer-nav-link">
+                <a href="https://www.instagram.com/invites/contact/?i=1s0atztwx3u8w&utm_content=plpfrux" class="footer-nav-link">
                   <ion-icon name="logo-instagram"></ion-icon>
                 </a>
               </li>
+
+              <li class="footer-nav-item">
+                <a href="https://www.tiktok.com/@inventiveworks.org?_t=8WArzdzcVGf&_r=1" class="footer-nav-link">
+                  <ion-icon name="logo-tiktok"></ion-icon>
+                </a>
+              </li>
+
               <li>
                 <a href="https://wa.me/+27663746228" class="social-link">
                   <ion-icon name="logo-whatsapp"></ion-icon>
