--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="navigation">
         <div class="toggle"><span></span></div>
         <ul>
-            <li style="--i:0;"><a href="#">Home</a></li>
+            <!--<li style="--i:0;"><a href="#">Home</a></li>-->
             <li style="--i:1;"><a href="./About/index.html">About</a></li>
             <li style="--i:4;"><a href="contactus.html">Contact Us</a></li>
         </ul>
@@ -24,7 +24,7 @@
             <a href="3dprint.html">
                 <button type="button">3D - Printing</button>
             </a>
-            <a href="soon.html">
+            <a href="InventiveWorks/index.html">
                 <button type="button">Carpenter Work</button>
             </a>
         </div>
