--- a/index.html
+++ b/index.html
@@ -1,69 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/mainpage.css">
-    <title>Inventiveworks</title>
-</head>
-<body>
-    <div class="navigation">
-        <div class="toggle"><span></span></div>
-        <ul>
-            <!--<li style="--i:0;"><a href="#">Home</a></li>-->
-            <li style="--i:1;"><a href="./About/index.html">About</a></li>
-            <li style="--i:4;"><a href="contactus.html">Contact Us</a></li>
-        </ul>
-    </div>
-
-    <div class="content">
-        <h1>Welcome To Inventiveworks.</h1>
-        <p>Select you're option.</p>
-        <div>
-            <a href="3dprint.html">
-                <button type="button">3D - Printing</button>
-            </a>
-            <a href="InventiveWorks/index.html">
-                <button type="button">Carpenter Work</button>
-            </a>
-        </div>
-
-<!--Maintanince-->
-        <!--<section class="coming-soon">
-            <div>
-              <h3>Scheduled Maintanince</h3>
-              <div class="countdown">
-                <div class="container-day">
-                  <h3 class="day">Time</h3>
-                  <h3>Day</h3>
-                </div>
-                <div class="container-hour">
-                  <h3 class="hour">Time</h3>
-                  <h3>hour</h3>
-                </div>
-                <div class="container-minute">
-                  <h3 class="minute">Time</h3>
-                  <h3>minute</h3>
-                </div>
-                <div class="container-second">
-                  <h3 class="second">Time</h3>
-                  <h3>Second</h3>
-                </div>
-              </div>
-            </div>
-          </section>
-          <script src="./assets/js/maintanince.js"></script>--->
-
-    </div>
- 
-    <script>
-        let navigation = document.querySelector('.navigation');
-        document.querySelector('.toggle').onclick = function (){
-            this.classList.toggle('active')
-            navigation.classList.toggle('active')
-        }
-    </script>
-
-</body>
-</html>
+<script>
+  document.write(unescape('%3C%21DOCTYPE%20html%3E%0A%3Chtml%20lang%3D%22en%22%3E%0A%3Chead%3E%0A%20%20%20%20%3Cmeta%20charset%3D%22UTF-8%22%3E%0A%20%20%20%20%3Cmeta%20http-equiv%3D%22X-UA-Compatible%22%20content%3D%22IE%3Dedge%22%3E%0A%20%20%20%20%3Cmeta%20name%3D%22viewport%22%20content%3D%22width%3Ddevice-width%2C%20initial-scale%3D1.0%22%3E%0A%20%20%20%20%3Clink%20rel%3D%22stylesheet%22%20href%3D%22./assets/css/mainpage.css%22%3E%0A%20%20%20%20%3Ctitle%3EInventiveworks%3C/title%3E%0A%3C/head%3E%0A%3Cbody%3E%0A%20%20%20%20%3Cdiv%20class%3D%22navigation%22%3E%0A%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22toggle%22%3E%3Cspan%3E%3C/span%3E%3C/div%3E%0A%20%20%20%20%20%20%20%20%3Cul%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%21--%3Cli%20style%3D%22--i%3A0%3B%22%3E%3Ca%20href%3D%22%23%22%3EHome%3C/a%3E%3C/li%3E--%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Cli%20style%3D%22--i%3A1%3B%22%3E%3Ca%20href%3D%22./About/index.html%22%3EAbout%3C/a%3E%3C/li%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Cli%20style%3D%22--i%3A4%3B%22%3E%3Ca%20href%3D%22contactus.html%22%3EContact%20Us%3C/a%3E%3C/li%3E%0A%20%20%20%20%20%20%20%20%3C/ul%3E%0A%20%20%20%20%3C/div%3E%0A%0A%20%20%20%20%3Cdiv%20class%3D%22content%22%3E%0A%20%20%20%20%20%20%20%20%3Ch1%3EWelcome%20To%20Inventiveworks.%3C/h1%3E%0A%20%20%20%20%20%20%20%20%3Cp%3ESelect%20you%27re%20option.%3C/p%3E%0A%20%20%20%20%20%20%20%20%3Cdiv%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Ca%20href%3D%223dprint.html%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cbutton%20type%3D%22button%22%3E3D%20-%20Printing%3C/button%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C/a%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Ca%20href%3D%22InventiveWorks/index.html%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cbutton%20type%3D%22button%22%3ECarpenter%20Work%3C/button%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C/a%3E%0A%20%20%20%20%20%20%20%20%3C/div%3E%0A%0A%3C%21--Maintanince--%3E%0A%20%20%20%20%20%20%20%20%3C%21--%3Csection%20class%3D%22coming-soon%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Cdiv%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Ch3%3EScheduled%20Maintanince%3C/h3%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22countdown%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22container-day%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Ch3%20class%3D%22day%22%3ETime%3C/h3%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Ch3%3EDay%3C/h3%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22container-hour%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Ch3%20class%3D%22hour%22%3ETime%3C/h3%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Ch3%3Ehour%3C/h3%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22container-minute%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Ch3%20class%3D%22minute%22%3ETime%3C/h3%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Ch3%3Eminute%3C/h3%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22container-second%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Ch3%20class%3D%22second%22%3ETime%3C/h3%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Ch3%3ESecond%3C/h3%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%20%20%20%20%3C/section%3E%0A%20%20%20%20%20%20%20%20%20%20%3Cscript%20src%3D%22./assets/js/maintanince.js%22%3E%3C/script%3E---%3E%0A%0A%20%20%20%20%3C/div%3E%0A%20%0A%20%20%20%20%3Cscript%3E%0A%20%20%20%20%20%20%20%20let%20navigation%20%3D%20document.querySelector%28%27.navigation%27%29%3B%0A%20%20%20%20%20%20%20%20document.querySelector%28%27.toggle%27%29.onclick%20%3D%20function%20%28%29%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20this.classList.toggle%28%27active%27%29%0A%20%20%20%20%20%20%20%20%20%20%20%20navigation.classList.toggle%28%27active%27%29%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%3C/script%3E%0A%0A%3C/body%3E%0A%3C/html%3E'))
+  </script>
+  
