--- a/soon.html
+++ b/soon.html
@@ -1,40 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Countdown timer</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" />
-  <link rel="stylesheet" href="soon.css" />
-</head>
-
-<body>
-  <section class="coming-soon">
-    <div>
-      <h3>Curently Under Maintanince.</h3>
-      <div class="countdown">
-        <div class="container-day">
-          <h3 class="day">Time</h3>
-          <h3>Day</h3>
-        </div>
-        <div class="container-hour">
-          <h3 class="hour">Time</h3>
-          <h3>hour</h3>
-        </div>
-        <div class="container-minute">
-          <h3 class="minute">Time</h3>
-          <h3>minute</h3>
-        </div>
-        <div class="container-second">
-          <h3 class="second">Time</h3>
-          <h3>Second</h3>
-        </div>
-      </div>
-    </div>
-    <!-- <img class="waiting" src="./images/example1.jpg" /> -->
-  </section>
-  <script src="soon.js"></script>
-</body>
-
-</html>
+<script>
+  document.write(unescape('%3C%21DOCTYPE%20html%3E%0A%3Chtml%20lang%3D%22en%22%3E%0A%0A%3Chead%3E%0A%20%20%3Cmeta%20charset%3D%22UTF-8%22%20/%3E%0A%20%20%3Cmeta%20name%3D%22viewport%22%20content%3D%22width%3Ddevice-width%2C%20initial-scale%3D1.0%22%20/%3E%0A%20%20%3Ctitle%3ECountdown%20timer%3C/title%3E%0A%20%20%3Clink%20rel%3D%22stylesheet%22%20href%3D%22https%3A//fonts.googleapis.com/css%3Ffamily%3DLato%22%20/%3E%0A%20%20%3Clink%20rel%3D%22stylesheet%22%20href%3D%22soon.css%22%20/%3E%0A%3C/head%3E%0A%0A%3Cbody%3E%0A%20%20%3Csection%20class%3D%22coming-soon%22%3E%0A%20%20%20%20%3Cdiv%3E%0A%20%20%20%20%20%20%3Ch3%3ECurently%20Under%20Maintanince.%3C/h3%3E%0A%20%20%20%20%20%20%3Cdiv%20class%3D%22countdown%22%3E%0A%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22container-day%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3Ch3%20class%3D%22day%22%3ETime%3C/h3%3E%0A%20%20%20%20%20%20%20%20%20%20%3Ch3%3EDay%3C/h3%3E%0A%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22container-hour%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3Ch3%20class%3D%22hour%22%3ETime%3C/h3%3E%0A%20%20%20%20%20%20%20%20%20%20%3Ch3%3Ehour%3C/h3%3E%0A%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22container-minute%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3Ch3%20class%3D%22minute%22%3ETime%3C/h3%3E%0A%20%20%20%20%20%20%20%20%20%20%3Ch3%3Eminute%3C/h3%3E%0A%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22container-second%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3Ch3%20class%3D%22second%22%3ETime%3C/h3%3E%0A%20%20%20%20%20%20%20%20%20%20%3Ch3%3ESecond%3C/h3%3E%0A%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%3C/div%3E%0A%20%20%20%20%3C%21--%20%3Cimg%20class%3D%22waiting%22%20src%3D%22./images/example1.jpg%22%20/%3E%20--%3E%0A%20%20%3C/section%3E%0A%20%20%3Cscript%20src%3D%22soon.js%22%3E%3C/script%3E%0A%3C/body%3E%0A%0A%3C/html%3E'))
+  </script>
+  
