--- a/submisive.html
+++ b/submisive.html
@@ -1,113 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Sent</title>
-</head>
-<style type="text/css">
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        background:  black;
-    }
-
-    section{
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 50vh;
-    }
-
-    .blob {
-        position: absolute;
-        width: 500px;
-        height: 500px;
-    }
+<script>
+    document.write(unescape('%3C%21DOCTYPE%20html%3E%0A%3Chtml%20lang%3D%22en%22%3E%0A%3Chead%3E%0A%20%20%20%20%3Cmeta%20charset%3D%22UTF-8%22%3E%0A%20%20%20%20%3Cmeta%20http-equiv%3D%22X-UA-Compatible%22%20content%3D%22IE%3Dedge%22%3E%0A%20%20%20%20%3Cmeta%20name%3D%22viewport%22%20content%3D%22width%3Ddevice-width%2C%20initial-scale%3D1.0%22%3E%0A%20%20%20%20%3Ctitle%3EOrder%20Sent%3C/title%3E%0A%3C/head%3E%0A%3Cstyle%20type%3D%22text/css%22%3E%0A%20%20%20%20*%20%7B%0A%20%20%20%20%20%20%20%20margin%3A%200%3B%0A%20%20%20%20%20%20%20%20padding%3A%200%3B%0A%20%20%20%20%20%20%20%20box-sizing%3A%20border-box%3B%0A%20%20%20%20%20%20%20%20background%3A%20%20black%3B%0A%20%20%20%20%7D%0A%0A%20%20%20%20section%7B%0A%20%20%20%20%20%20%20%20position%3A%20relative%3B%0A%20%20%20%20%20%20%20%20display%3A%20flex%3B%0A%20%20%20%20%20%20%20%20justify-content%3A%20center%3B%0A%20%20%20%20%20%20%20%20align-items%3A%20center%3B%0A%20%20%20%20%20%20%20%20min-height%3A%2050vh%3B%0A%20%20%20%20%7D%0A%0A%20%20%20%20.blob%20%7B%0A%20%20%20%20%20%20%20%20position%3A%20absolute%3B%0A%20%20%20%20%20%20%20%20width%3A%20500px%3B%0A%20%20%20%20%20%20%20%20height%3A%20500px%3B%0A%20%20%20%20%7D%0A%20%20%20%20%0A%20%20%20%20.content%7B%0A%20%20%20%20%20%20%20%20position%3A%20relative%3B%0A%20%20%20%20%20%20%20%20color%3A%20%23fff%3B%0A%20%20%20%20%20%20%20%20text-align%3A%20center%3B%0A%20%20%20%20%7D%0A%20%20%20%20.span%7B%0A%20%20%20%20%20%20%20%20color%3A%20grey%3B%0A%20%20%20%20%7D%0A%0A%20%20%20%20.rocket%20%7B%0A%20%20%20%20%20%20%20%20width%3A%20150px%3B%0A%20%20%20%20%20%20%20%20position%3A%20absolute%3B%0A%20%20%20%20%20%20%20%20right%3A%2050%25%3B%0A%20%20%20%20%20%20%20%20bottom%3A%200%3B%0A%20%20%20%20%20%20%20%20animation%3A%20rocket%206s%20linear%20infinite%3B%0A%20%20%20%20%7D%0A%20%20%20%20@keyframes%20rocket%7B%0A%20%20%20%20%20%20%20%200%25%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20bottom%3A%200%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20opacity%3A%200%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20100%25%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20bottom%3A%20105%25%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20opacity%3A%201%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%7D%0A%0A%20%20%20%20.whatsaap%20%7B%0A%20%20%20%20%20%20%20%20width%3A%2050px%3B%0A%20%20%20%20%20%20%20%20position%3A%20absolute%3B%0A%20%20%20%20%20%20%20%20right%3A%2050%25%3B%0A%0A%20%20%20%20%7D%0A%20%20%20%20%0A%0A%3C/style%3E%0A%3Cbody%3E%0A%20%20%20%20%3Csection%3E%0A%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22blob%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Csvg%20viewBox%3D%220%200%20800%20500%22%20preserveAspectRatio%3D%22none%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20xmlns%3Axlink%3D%22http%3A//www.w3.org/1999/xlink%22%20width%3D%22100%25%22%20id%3D%22blobSvg%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cg%20transform%3D%22translate%28166.3275909423828%2C%20-26.621658325195312%29%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cdefs%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3ClinearGradient%20id%3D%22gradient%22%20x1%3D%220%25%22%20y1%3D%220%25%22%20x2%3D%220%25%22%20y2%3D%22100%25%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cstop%20offset%3D%220%25%22%20style%3D%22stop-color%3A%20rgb%28254%2C%200%2C%20242%29%3B%22%3E%3C/stop%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cstop%20offset%3D%22100%25%22%20style%3D%22stop-color%3A%20rgb%28251%2C%202%2C%20128%29%3B%22%3E%3C/stop%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C/linearGradient%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C/defs%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cpath%20class%3D%22blob%22%20fill%3D%22url%28%23gradient%29%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Canimate%20attributeName%3D%22d%22%20dur%3D%2210000ms%22%20repeatCount%3D%22indefinite%22%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20values%3D%22M439%2C315.5Q454%2C381%2C386%2C390Q318%2C399%2C273%2C401.5Q228%2C404%2C184%2C390.5Q140%2C377%2C119.5%2C335.5Q99%2C294%2C74.5%2C242.5Q50%2C191%2C75%2C133.5Q100%2C76%2C162.5%2C76Q225%2C76%2C283%2C63Q341%2C50%2C396.5%2C85Q452%2C120%2C438%2C185Q424%2C250%2C439%2C315.5Z%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20M418.5%2C297Q397%2C344%2C357%2C370.5Q317%2C397%2C271.5%2C408.5Q226%2C420%2C167.5%2C416Q109%2C412%2C81.5%2C359.5Q54%2C307%2C51%2C249Q48%2C191%2C73%2C132.5Q98%2C74%2C162.5%2C82Q227%2C90%2C273%2C94.5Q319%2C99%2C376%2C115.5Q433%2C132%2C436.5%2C191Q440%2C250%2C418.5%2C297Z%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20M410%2C302.5Q413%2C355%2C371%2C389.5Q329%2C424%2C277%2C425.5Q225%2C427%2C165%2C422Q105%2C417%2C64%2C367Q23%2C317%2C18%2C248.5Q13%2C180%2C60.5%2C133Q108%2C86%2C163.5%2C58.5Q219%2C31%2C285.5%2C29Q352%2C27%2C402.5%2C73Q453%2C119%2C430%2C184.5Q407%2C250%2C410%2C302.5Z%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20M431.5%2C293Q384%2C336%2C352.5%2C371Q321%2C406%2C269.5%2C437.5Q218%2C469%2C167.5%2C436.5Q117%2C404%2C88%2C355Q59%2C306%2C50%2C247.5Q41%2C189%2C89.5%2C155Q138%2C121%2C177%2C68.5Q216%2C16%2C281.5%2C26.5Q347%2C37%2C366%2C100Q385%2C163%2C432%2C206.5Q479%2C250%2C431.5%2C293Z%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20M418.5%2C299Q403%2C348%2C363.5%2C380.5Q324%2C413%2C276%2C409Q228%2C405%2C173%2C404Q118%2C403%2C64%2C361.5Q10%2C320%2C51.5%2C262Q93%2C204%2C111.5%2C158Q130%2C112%2C176.5%2C85.5Q223%2C59%2C273%2C75Q323%2C91%2C377%2C112.5Q431%2C134%2C432.5%2C192Q434%2C250%2C418.5%2C299Z%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20M422.5%2C308Q431%2C366%2C381%2C396.5Q331%2C427%2C274%2C452Q217%2C477%2C166%2C441.5Q115%2C406%2C102%2C351.5Q89%2C297%2C64%2C242.5Q39%2C188%2C66.5%2C129Q94%2C70%2C158%2C61Q222%2C52%2C272%2C72.5Q322%2C93%2C355.5%2C127Q389%2C161%2C401.5%2C205.5Q414%2C250%2C422.5%2C308Z%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20M443.5%2C316Q455%2C382%2C395.5%2C410Q336%2C438%2C276.5%2C457.5Q217%2C477%2C161%2C447Q105%2C417%2C65%2C366.5Q25%2C316%2C30%2C251.5Q35%2C187%2C72%2C137Q109%2C87%2C165.5%2C72Q222%2C57%2C272.5%2C73.5Q323%2C90%2C368.5%2C117Q414%2C144%2C423%2C197Q432%2C250%2C443.5%2C316Z%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20M411.5%2C295Q391%2C340%2C372%2C407.5Q353%2C475%2C289.5%2C445.5Q226%2C416%2C173%2C408.5Q120%2C401%2C100.5%2C350.5Q81%2C300%2C56%2C243Q31%2C186%2C76%2C144Q121%2C102%2C174%2C94.5Q227%2C87%2C285.5%2C65.5Q344%2C44%2C399.5%2C81Q455%2C118%2C443.5%2C184Q432%2C250%2C411.5%2C295Z%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20M439%2C315.5Q454%2C381%2C386%2C390Q318%2C399%2C273%2C401.5Q228%2C404%2C184%2C390.5Q140%2C377%2C119.5%2C335.5Q99%2C294%2C74.5%2C242.5Q50%2C191%2C75%2C133.5Q100%2C76%2C162.5%2C76Q225%2C76%2C283%2C63Q341%2C50%2C396.5%2C85Q452%2C120%2C438%2C185Q424%2C250%2C439%2C315.5Z%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C/animate%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C/path%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C/g%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C/svg%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%3C/section%3E%0A%0A%20%20%20%20%3Cdiv%20class%3D%22content%22%3E%0A%20%20%20%20%20%20%20%20%3Ch1%3EYou%27re%20Order%20Has%20Been%20Sent%21%21%3C/h1%3E%0A%20%20%20%20%20%20%20%20%3Cbr%3E%0A%20%20%20%20%20%20%20%20%3Ch3%3ETap%20The%20WhatsApp%20Icon%20And%20Message%20%3Cspan%20class%3D%22span%22%3E%3Cbr%3EDone%3C/span%3E%3C/h3%3E%0A%20%20%20%20%3C/div%3E%0A%0A%20%20%20%20%3Cdiv%3E%0A%20%20%20%20%20%20%20%20%3Cimg%20src%3D%22./assets/images/products/rocket.png%22%20class%3D%22rocket%22%3E%0A%20%20%20%20%3C/div%3E%0A%0A%20%20%20%20%3Cdiv%3E%0A%20%20%20%20%20%20%20%20%3Ca%20href%3D%22https%3A//wa.me/+27663746228%22%20targer%3D%22_blank%22%20style%3D%22display%3A%20flex%3B%20justify-content%3A%20center%3B%20align-items%3A%20center%3B%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Cimg%20src%3D%22./assets/images/products/whatsaap.png%22%20width%3D%2230px%22%20height%3D%2230px%22%20%3E%0A%20%20%20%20%20%20%20%20%20%20%3C/a%3E%0A%20%20%20%20%3C/div%3E%0A%0A%3C/body%3E%0A%3C/html%3E'))
+    </script>
     
-    .content{
-        position: relative;
-        color: #fff;
-        text-align: center;
-    }
-    .span{
-        color: grey;
-    }
-
-    .rocket {
-        width: 150px;
-        position: absolute;
-        right: 50%;
-        bottom: 0;
-        animation: rocket 6s linear infinite;
-    }
-    @keyframes rocket{
-        0%{
-            bottom: 0;
-            opacity: 0;
-        }
-        100%{
-            bottom: 105%;
-            opacity: 1;
-        }
-    }
-
-    .whatsaap {
-        width: 50px;
-        position: absolute;
-        right: 50%;
-
-    }
-    
-
-</style>
-<body>
-    <section>
-        <div class="blob">
-            <svg viewBox="0 0 800 500" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" id="blobSvg">
-                <g transform="translate(166.3275909423828, -26.621658325195312)">
-                  <defs>
-                    <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                      <stop offset="0%" style="stop-color: rgb(254, 0, 242);"></stop>
-                      <stop offset="100%" style="stop-color: rgb(251, 2, 128);"></stop>
-                    </linearGradient>
-                  </defs>
-                  <path class="blob" fill="url(#gradient)">
-                    <animate attributeName="d" dur="10000ms" repeatCount="indefinite"
-                    values="M439,315.5Q454,381,386,390Q318,399,273,401.5Q228,404,184,390.5Q140,377,119.5,335.5Q99,294,74.5,242.5Q50,191,75,133.5Q100,76,162.5,76Q225,76,283,63Q341,50,396.5,85Q452,120,438,185Q424,250,439,315.5Z;
-                    M418.5,297Q397,344,357,370.5Q317,397,271.5,408.5Q226,420,167.5,416Q109,412,81.5,359.5Q54,307,51,249Q48,191,73,132.5Q98,74,162.5,82Q227,90,273,94.5Q319,99,376,115.5Q433,132,436.5,191Q440,250,418.5,297Z;
-                    M410,302.5Q413,355,371,389.5Q329,424,277,425.5Q225,427,165,422Q105,417,64,367Q23,317,18,248.5Q13,180,60.5,133Q108,86,163.5,58.5Q219,31,285.5,29Q352,27,402.5,73Q453,119,430,184.5Q407,250,410,302.5Z;
-                    M431.5,293Q384,336,352.5,371Q321,406,269.5,437.5Q218,469,167.5,436.5Q117,404,88,355Q59,306,50,247.5Q41,189,89.5,155Q138,121,177,68.5Q216,16,281.5,26.5Q347,37,366,100Q385,163,432,206.5Q479,250,431.5,293Z;
-                    M418.5,299Q403,348,363.5,380.5Q324,413,276,409Q228,405,173,404Q118,403,64,361.5Q10,320,51.5,262Q93,204,111.5,158Q130,112,176.5,85.5Q223,59,273,75Q323,91,377,112.5Q431,134,432.5,192Q434,250,418.5,299Z;
-                    M422.5,308Q431,366,381,396.5Q331,427,274,452Q217,477,166,441.5Q115,406,102,351.5Q89,297,64,242.5Q39,188,66.5,129Q94,70,158,61Q222,52,272,72.5Q322,93,355.5,127Q389,161,401.5,205.5Q414,250,422.5,308Z;
-                    M443.5,316Q455,382,395.5,410Q336,438,276.5,457.5Q217,477,161,447Q105,417,65,366.5Q25,316,30,251.5Q35,187,72,137Q109,87,165.5,72Q222,57,272.5,73.5Q323,90,368.5,117Q414,144,423,197Q432,250,443.5,316Z;
-                    M411.5,295Q391,340,372,407.5Q353,475,289.5,445.5Q226,416,173,408.5Q120,401,100.5,350.5Q81,300,56,243Q31,186,76,144Q121,102,174,94.5Q227,87,285.5,65.5Q344,44,399.5,81Q455,118,443.5,184Q432,250,411.5,295Z;
-                    M439,315.5Q454,381,386,390Q318,399,273,401.5Q228,404,184,390.5Q140,377,119.5,335.5Q99,294,74.5,242.5Q50,191,75,133.5Q100,76,162.5,76Q225,76,283,63Q341,50,396.5,85Q452,120,438,185Q424,250,439,315.5Z">
-                    </animate>
-                  </path>
-                </g>
-              </svg>
-            </div>
-    </section>
-
-    <div class="content">
-        <h1>You're Order Has Been Sent!!</h1>
-        <br>
-        <h3>Tap The WhatsApp Icon And Message <span class="span"><br>Done</span></h3>
-    </div>
-
-    <div>
-        <img src="./assets/images/products/rocket.png" class="rocket">
-    </div>
-
-    <div>
-        <a href="https://wa.me/+27663746228" targer="_blank" style="display: flex; justify-content: center; align-items: center;">
-            <img src="./assets/images/products/whatsaap.png" width="30px" height="30px" >
-          </a>
-    </div>
-
-</body>
-</html>
