--- a/vedio.html
+++ b/vedio.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <video src="vedio/2.mp4" type="vedeo/mp4" width="350" height="720" controls auto>
+    <video src="vedio/1.mp4" type="vedeo/mp4" width="350" height="720" loop autoplay>
 
     </video>
 </body>
