--- a/InventiveWorks/contactus.html
+++ b/InventiveWorks/contactus.html
@@ -1,33 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/contactus.css">
-    <title>Contact Us</title>
-</head>
-<body>
-
-    <script type="text/javascript">var submited=false</script>
-    <iframe name="hiddenConfirm" id="hiddenConfirm" style="display: none;" onload="if(submitted){window.location='submisivecontactus.html';}"></iframe>
-
-    <section class="contact">
-        <div class="contact-form">
-            <h4>Contact<span> Us</span></h4>
-            <p>Any Questions, or a Quote please feel free to contact us.
-            </p>
-
-            <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScXZmAUaohOZdvwPhpIfWMT9CM2Ztr5vuvurL34N0v-EgbL4A/formResponse"  target="hiddenConfirm" onsubmit="submitted=true" method="post">
-                <input type="text"  name="entry.582679317" placeholder="Your Name" required>
-                <input type="text"  name="entry.1318312675" placeholder="E-mail" required>
-                <input type="text"  name="entry.929592155" placeholder="Subject" required>
-                <input type="text"  name="entry.1854061409" placeholder="Your Area" required>
-                <textarea type="text" name="entry.942405682" cols="30" rows="10" placeholder="How can we assist you?" required></textarea>
-                <button type="submit" class="btn">Submit</button>
-            </form>
-        </div>
-    </section>
-
-</body>
-</html>
+<script>
+    document.write(unescape('%3C%21DOCTYPE%20html%3E%0A%3Chtml%20lang%3D%22en%22%3E%0A%3Chead%3E%0A%20%20%20%20%3Cmeta%20charset%3D%22UTF-8%22%3E%0A%20%20%20%20%3Cmeta%20http-equiv%3D%22X-UA-Compatible%22%20content%3D%22IE%3Dedge%22%3E%0A%20%20%20%20%3Cmeta%20name%3D%22viewport%22%20content%3D%22width%3Ddevice-width%2C%20initial-scale%3D1.0%22%3E%0A%20%20%20%20%3Clink%20rel%3D%22stylesheet%22%20href%3D%22css/contactus.css%22%3E%0A%20%20%20%20%3Ctitle%3EContact%20Us%3C/title%3E%0A%3C/head%3E%0A%3Cbody%3E%0A%0A%20%20%20%20%3Cscript%20type%3D%22text/javascript%22%3Evar%20submited%3Dfalse%3C/script%3E%0A%20%20%20%20%3Ciframe%20name%3D%22hiddenConfirm%22%20id%3D%22hiddenConfirm%22%20style%3D%22display%3A%20none%3B%22%20onload%3D%22if%28submitted%29%7Bwindow.location%3D%27submisivecontactus.html%27%3B%7D%22%3E%3C/iframe%3E%0A%0A%20%20%20%20%3Csection%20class%3D%22contact%22%3E%0A%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22contact-form%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Ch4%3EContact%3Cspan%3E%20Us%3C/span%3E%3C/h4%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Cp%3EAny%20Questions%2C%20or%20a%20Quote%20please%20feel%20free%20to%20contact%20us.%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C/p%3E%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Cform%20action%3D%22https%3A//docs.google.com/forms/u/0/d/e/1FAIpQLScXZmAUaohOZdvwPhpIfWMT9CM2Ztr5vuvurL34N0v-EgbL4A/formResponse%22%20%20target%3D%22hiddenConfirm%22%20onsubmit%3D%22submitted%3Dtrue%22%20method%3D%22post%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cinput%20type%3D%22text%22%20%20name%3D%22entry.582679317%22%20placeholder%3D%22Your%20Name%22%20required%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cinput%20type%3D%22text%22%20%20name%3D%22entry.1318312675%22%20placeholder%3D%22E-mail%22%20required%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cinput%20type%3D%22text%22%20%20name%3D%22entry.929592155%22%20placeholder%3D%22Subject%22%20required%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cinput%20type%3D%22text%22%20%20name%3D%22entry.1854061409%22%20placeholder%3D%22Your%20Area%22%20required%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Ctextarea%20type%3D%22text%22%20name%3D%22entry.942405682%22%20cols%3D%2230%22%20rows%3D%2210%22%20placeholder%3D%22How%20can%20we%20assist%20you%3F%22%20required%3E%3C/textarea%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cbutton%20type%3D%22submit%22%20class%3D%22btn%22%3ESubmit%3C/button%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C/form%3E%0A%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%3C/section%3E%0A%0A%3C/body%3E%0A%3C/html%3E'))
+    </script>
+    
