--- a/About/index.html
+++ b/About/index.html
@@ -1,4 +1,20 @@
-<script>
-    document.write(unescape('%3Chtml%20lang%3D%22en%22%3E%0A%3Chead%3E%0A%20%20%20%20%3Cmeta%20charset%3D%22UTF-8%22%3E%0A%20%20%20%20%3Cmeta%20name%3D%22viewport%22%20content%3D%22width%3Ddevice-width%2C%20initial-scale%3D1.0%22%3E%0A%20%20%20%20%3Ctitle%3E%3C/title%3E%0A%20%20%20%20%3Clink%20rel%3D%22stylesheet%22%20href%3D%22style.css%22%3E%0A%3C/head%3E%0A%3Cbody%3E%0A%20%20%20%20%3Cdiv%20class%3D%22about-section%22%3E%0A%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22inner-container%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Ch1%3EAbout%20Us%3C/h1%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Cp%20class%3D%22text%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20We%20specialize%20in%203D-Printing%20%26%20Carpenter%20work.%20We%20create%20your%20idea%20into%20a%20real%20product.%0A%20%20%20%20%20%20%20%20%20%20%20%20If%20you%20have%20any%20Questions%20Please%20feel%20free%20to%20Contact%20Us%0A%20%20%20%20%20%20%20%20%20%20%20%20%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C/p%3E%0A%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%3C/div%3E%0A%3C/body%3E%0A%3C/html%3E'))
-    </script>
-    
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="about-section">
+        <div class="inner-container">
+            <h1>About Us</h1>
+            <p class="text">
+            We specialize in 3D-Printing & Carpenter work. We create your idea into a real product.
+            If you have any Questions Please feel free to Contact Us
+            
+            </p>
+        </div>
+    </div>
+</body>
+</html>
