--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <div class="toggle"><span></span></div>
         <ul>
             <!--<li style="--i:0;"><a href="#">Home</a></li>-->
-            <li style="--i:1;"><a href="./About/index.html">About</a></li>
-            <li style="--i:4;"><a href="contactus.html">Contact Us</a></li>
+            <li style="--i:1;"><a href="./About/index.html">About Us</a></li>
+            <li style="--i:4;"><a href="./contact us/contactus.html">Contact Us</a></li>
         </ul>
     </div>
 
     <div class="content">
         <h1>Welcome To Inventiveworks.</h1>
-        <p>Select you're option.</p>
+        <p>Select you're catigory.</p>
         <div>
             <a href="3dprint.html">
                 <button type="button">3D - Printing</button>
@@ -27,6 +27,10 @@
             <a href="InventiveWorks/index.html">
                 <button type="button">Carpenter Work</button>
             </a>
+            <a href="soon/soon.html">
+              <button type="button">Mobile Games</button>
+          </a>
+            
         </div>
 
 <!--Maintanince-->
@@ -66,4 +70,4 @@
     </script>
 
 </body>
-</html>
+</html
